# Toutatis

./: .gitignore  CMakeLists.txt  README.md  Toutatis.cpp  Toutatis.h  Toutatis.kdev4  com.noughmad.Toutatis.Project.xml  com.noughmad.Toutatis.Task.xml  com.noughmad.Toutatis.xml  com.noughmad.toutatis.Event.xml  com.noughmad.toutatis.Note.xml  com.noughmad.toutatis.Project.xml  com.noughmad.toutatis.Task.xml  generate_dbus_interfaces.sh  main.cpp  project.cpp  project.h  task.cpp  toutatis.cpp  toutatis.h
client/: CMakeLists.txt  client.cpp  client.h  main.cpp  tasktreemodel.cpp  tasktreemodel.h
cmake/: DBusMacros.cmake
daemon/: CMakeLists.txt  com.noughmad.Toutatis.service.in  event.cpp  event.h  main.cpp  model.cpp  model.h  note.cpp  note.h  project.cpp  project.h  task.cpp  task.h  toutatis.cpp  toutatis.h  utils.cpp  utils.h
dataengine/: CMakeLists.txt  plasma-engine-toutatis.desktop  tasksengine.cpp  tasksengine.h
git/: CMakeLists.txt  commit-msg.sample  git-time
ntasks/: manage.py
ntasks/ntasks/: middleware.py  settings.py  urls.py  wsgi.py
ntasks/templates/: base.html
ntasks/toutatis/: models.py  urls.py
plasmoid/: CMakeLists.txt
plasmoid/plasma-applet-toutatis/: metadata.desktop
plasmoid/plasma-applet-toutatis/contents/ui/: HorizontalLine.qml  StatusButton.qml  TaskItem.qml  TrackButton.qml  VerticalLine.qml  main.qml
qml/: CMakeLists.txt  qmldir  toutatisplugin.cpp  toutatisplugin.h
qtlib/: CMakeLists.txt  event.cpp  event.h  global.h  note.cpp  note.h  project.cpp  project.h  qtatis_export.h  task.cpp  task.h  tasksmodel.cpp  tasksmodel.h  tasktreemodel.cpp  tasktreemodel.h  tasktreemodel_p.h  toutatis.cpp  toutatis.h
timesync/: CMakeLists.txt  binding.cpp  binding.h  istorage.cpp  istorage.h  object.cpp  object.h  sync.cpp  sync.h  timesync.h  xmlstorage.cpp  xmlstorage.h
website/toutatis/: smart.json  toutatis.html  toutatis.js
website/toutatis/.meteor/: packages
